--- a/arch/arm64/boot/dts/amlogic/g12a_s905x2_u211.dts
+++ b/arch/arm64/boot/dts/amlogic/g12a_s905x2_u211.dts
@@ -135,6 +135,7 @@
 		};
 		/*  vdin0 CMA pool */
 		vdin0_cma_reserved:linux,vdin0_cma {
+                        status = "disabled";
 			compatible = "shared-dma-pool";
 			reusable;
 		/* 1920x1080x2x4  =16+4 M */
@@ -143,6 +144,7 @@
 		};
 		/*  vdin1 CMA pool */
 		vdin1_cma_reserved:linux,vdin1_cma {
+                        status = "disabled";
 			compatible = "shared-dma-pool";
 			reusable;
 			/* 1920x1080x2x4  =16 M */
@@ -1166,7 +1168,7 @@
 /*if you want to use vdin just modify status to "ok"*/
 &vdin0 {
 	memory-region = <&vdin0_cma_reserved>;
-	status = "okay";
+	status = "disable";
 	/*vdin write mem color depth support:
 	 *bit0:support 8bit
 	 *bit1:support 9bit
@@ -1178,7 +1180,7 @@
 };
 &vdin1 {
 	memory-region = <&vdin1_cma_reserved>;
-	status = "okay";
+	status = "disable";
 	/*vdin write mem color depth support:
 	 *bit0:support 8bit
 	 *bit1:support 9bit
